<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDoctorNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_doctor"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvFechaCreacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_creaci_n"
            android:layout_marginTop="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvTalla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvAlergias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvContenidoReceta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contenido_de_la_receta"
            android:layout_marginTop="16dp"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>
